# corvix

./: .codecov.yml  .env.example  .gitignore  .lighthouserc.json  .markdown_link_check_config.json  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  .ruff.toml  AGENTS.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  README.md  SECURITY.md  alembic.ini  corvix-home-after-favicon-fix.yaml  corvix-home.yaml  docker-compose.lighthouse.yml  docker-compose.yml  hatch_build.py  notif_plan.md  other.yml  package-lock.json  package.json  plan.md  pyproject.toml  sonar-project.properties  sonar.issues.md  testplan.md  uiplan.md
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/hooks/: hooks.json
.github/workflows/: bot.yml  codeql.yml  deploy.yml  docs.yml  gemini-review.yml  test.yml
.vcpkg-overlays/toolchains/: clang_include.cmake
config/: corvix.example.yaml
docker/: lighthouse.Dockerfile
docs/: Makefile  authors.md  conf.py  contributing.md  index.md  installation.md  new_notification_target.md  observability.md  quickstart.md  readme.md  spec.md  substitutions.py  usage.md
docs/examples/: basic.md
frontend/: index.html  openapi.json  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
frontend/public/: theme-init.js
frontend/src/: App.smoke.test.ts  App.svelte  App.svelte.test.ts  api-types.gen.ts  api.test.ts  api.ts  app.module.css  app.test.tsx  app.tsx  main.ts  main.tsx  types.test.ts  types.ts
frontend/src/auth/: AuthContext.test.tsx  AuthContext.tsx  AuthGate.test.tsx  AuthGate.tsx
frontend/src/components/: AuthGate.svelte  AuthGate.svelte.test.ts  CenteredNotice.svelte  CenteredNotice.svelte.test.ts  CommandPalette.svelte  CommandPalette.svelte.test.ts  Dashboard.svelte  EmptyState.module.css  EmptyState.svelte  EmptyState.svelte.test.ts  EmptyState.test.tsx  EmptyState.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  ErrorToast.svelte  ErrorToast.svelte.test.ts  FilterBar.module.css  FilterBar.svelte  FilterBar.svelte.test.ts  FilterBar.test.tsx  FilterBar.tsx  GroupHeader.svelte  GroupHeader.svelte.test.ts  IgnoreRuleDialog.module.css  IgnoreRuleDialog.svelte  IgnoreRuleDialog.svelte.test.ts  IgnoreRuleDialog.test.tsx  IgnoreRuleDialog.tsx  LoadingSkeleton.svelte  LoadingSkeleton.svelte.test.ts  LoadingSkeleton.test.tsx  LoadingSkeleton.tsx  NotFound.svelte  NotFound.svelte.test.ts  NotFound.test.tsx  NotFound.tsx  NotificationTable.svelte  NotificationTable.svelte.test.ts  NotificationTable.test.tsx  NotificationTable.tsx  (+32 more)
frontend/src/hooks/: useBrowserNotifications.test.tsx  useBrowserNotifications.ts  useColumnResize.test.tsx  useColumnResize.ts  useCurrentRoute.ts  useDashboardState.test.tsx  useDashboardState.ts  useDismiss.test.tsx  useDismiss.ts  useFilterSort.test.tsx  useFilterSort.ts  useFilters.test.tsx  useFilters.ts  useIgnoreRuleDialog.test.tsx  useIgnoreRuleDialog.ts  useKeyboard.test.tsx  useKeyboard.ts  useMarkRead.test.tsx  useMarkRead.ts  useSnapshot.sse.test.tsx  useSnapshot.test.tsx  useSnapshot.ts  useSort.test.tsx  useSort.ts  useUrlQuery.ts
frontend/src/lib/: auth.svelte.test.ts  auth.svelte.ts  browserNotifications.svelte.test.ts  browserNotifications.svelte.ts  columnResize.svelte.test.ts  columnResize.svelte.ts  commandPalette.svelte.test.ts  commandPalette.svelte.ts  context.ts  dashboards.svelte.test.ts  dashboards.svelte.ts  dismiss.svelte.test.ts  dismiss.svelte.ts  filterSort.svelte.test.ts  filterSort.svelte.ts  filters.svelte.test.ts  filters.svelte.ts  groupCollapse.svelte.test.ts  groupCollapse.svelte.ts  ignoreRule.svelte.test.ts  ignoreRule.svelte.ts  keyboard.svelte.test.ts  keyboard.svelte.ts  markRead.svelte.test.ts  markRead.svelte.ts  motion.svelte.test.ts  motion.svelte.ts  router.svelte.test.ts  router.svelte.ts  search.svelte.test.ts  search.svelte.ts  snapshot.svelte.test.ts  snapshot.svelte.ts  sort.svelte.test.ts  sort.svelte.ts  theme.svelte.test.ts  theme.svelte.ts
frontend/src/styles/: app.css  table.css  tokens.css
frontend/src/test/: fixtures.ts  http.ts  renderWithStores.ts  runes.svelte.ts  setup.ts
scripts/: export_openapi.py  first_run.py  frontend_build.sh  reset-state.sh
secrets/: database_url.txt.example  github_token.txt.example  postgres_password.txt.example
src/corvix/: __init__.py  actions.py  cli.py  config.py  crypto.py  dashboarding.py  db.py  domain.py  env.py  ingestion.py  presentation.py  rules.py  scoring.py  services.py  storage.py  types.py
src/corvix/config/: __init__.py  _utils.py  app.py  dashboards.py  github.py  notifications.py  rules.py  scoring.py
src/corvix/enrichment/: __init__.py  base.py  engine.py
src/corvix/hydration/: __init__.py  base.py  engine.py
src/corvix/migrations/: env.py
src/corvix/notifications/: __init__.py  dedupe.py  detector.py  dispatcher.py  models.py
src/corvix/observability/: __init__.py  logging.py  metrics.py  middleware.py  tracing.py
src/corvix/pipeline/: __init__.py  base.py  engine.py  provider.py
src/corvix/web/: __init__.py  actions.py  app.py  assets.py  (+10 more)
tests/: __init__.py  conftest.py  test_actions.py  test_config.py  test_corvix.py  test_dashboarding.py  test_domain.py  test_env.py  test_services.py  test_storage.py  test_web.py
tests/e2e/: conftest.py  playwright_types.py  test_dashboard_ui.py  test_ui_screenshot.py
tests/integration/: conftest.py  test_cli.py  test_migrations.py  test_services.py  test_storage_postgres.py  test_web_api.py  test_web_sse.py
tests/lighthouse/: corvix.lighthouse.yaml  notifications.json  prepare_fixture.py
tests/support/: __init__.py  storage.py
tests/unit/: test_actions.py  test_api_contract.py  test_cli.py  test_config.py  test_crypto.py  test_dashboarding.py  test_domain.py  test_enrichment.py  test_hydration.py  test_ingestion.py  test_notifications.py  test_observability.py  test_pipeline_engine.py  test_rules.py  test_scoring.py  test_storage_cache.py  test_target_slack.py  test_web_app_helpers.py
(+27 files in other folders)
