[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "corvix"
authors = [
    { name = "corvix", email = "coding@fritze.me" }
]
description = "Github notifications dashboards"
readme = "README.md"
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.13"
dependencies = [
    "rich",
    "packaging",
    "typer",
    "PyYAML",
    "litestar",
    "uvicorn",
    "asyncpg>=0.31.0",
    "psycopg[binary]>=3.3.3",
    "alembic>=1.18.4",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
fallback_version = "0.0.0"
[tool.hatch.build.hooks.vcs]
version-file = "_version.py"

[dependency-groups]
docs = [
    "sphinx>=6",
    "sphinx-autoapi>=3",
    "myst-nb>=0.18",
    "furo>=2023.9.10"
]
dev = [
    "build",
    "mypy",
    "ruff",
    "pytest",
    "pytest-cov",
    "pytest-pycharm",
    "pytest-regressions",
    "pytest-datadir",
]

[project.urls]
Documentation = "https://github.com/renefritze/corvix"
Source = "https://github.com/renefritze/corvix"

[project.scripts]
corvix = "corvix.cli:main"
corvix-web = "corvix.web.app:run"

[tool.ruff]
target-version = "py313"
select = ["ALL"]
extend-ignore = ["E501", "ANN201", "ANN001", "D211", "D213"]
extend-exclude = ["_version.py", "docs/*.py"]
fix = true
line-length = 120

[tool.ruff.per-file-ignores]
"tests/*.py" = ["S101", "D103"]

[tool.pytest.ini_options]
addopts = "--cov=corvix --cov-report=term-missing"
