[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "corvix"
authors = [
    { name = "corvix", email = "coding@fritze.me" }
]
description = "Github notifications dashboards"
readme = "README.md"
license = { file = "LICENSE" }
dynamic = ["version"]
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.13"
dependencies = [
    "rich>=13.0",
    "packaging>=24.0",
    "click>=8.1",
    "PyYAML>=6.0",
    "litestar>=2.10",
    "uvicorn>=0.30",
    "asyncpg>=0.31.0",
    "cryptography>=44.0.0",
    "psycopg[binary,pool]>=3.3.3",
    "alembic>=1.18.4",
    "prometheus-client>=0.21",
]

[project.optional-dependencies]
e2e = ["pytest-playwright>=0.7.1"]
otel = [
    "opentelemetry-api>=1.30",
    "opentelemetry-sdk>=1.30",
    "opentelemetry-exporter-otlp-proto-http>=1.30",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
fallback_version = "0.0.0"
[tool.hatch.build.hooks.vcs]
version-file = "_version.py"

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.wheel]
packages = ["src/corvix"]

[tool.hatch.build.targets.wheel.force-include]
"src/corvix/web/static/assets" = "corvix/web/static/assets"

[tool.hatch.build.targets.sdist.force-include]
"src/corvix/web/static/assets" = "src/corvix/web/static/assets"

[dependency-groups]
docs = [
    "sphinx>=6",
    "sphinx-autoapi>=3",
    "myst-nb>=0.18",
    "furo>=2023.9.10"
]
dev = [
    "build",
    "ty",
    "ruff",
    "pytest",
    "pytest-cov",
    "pytest-pycharm",
    "pytest-regressions",
    "pytest-datadir",
    "testcontainers[postgres]>=4.14.2",
    "opentelemetry-api>=1.30",
    "opentelemetry-sdk>=1.30",
    "opentelemetry-exporter-otlp-proto-http>=1.30",
]

[project.urls]
Documentation = "https://github.com/renefritze/corvix"
Source = "https://github.com/renefritze/corvix"

[project.scripts]
corvix = "corvix.cli:main"
corvix-web = "corvix.web.app:run"

[tool.ruff]
target-version = "py313"
extend-exclude = ["_version.py", "docs/*.py"]
fix = true
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
extend-ignore = ["E501", "ANN201", "ANN001", "D211", "D213", "PLR2004", "PLR0913", "RUF043"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101", "D103"]
"tests/*/*.py" = ["S101", "D103"]

[tool.pytest.ini_options]
addopts = "--cov=corvix --cov-report=term-missing"
testpaths = ["tests"]
markers = [
    "integration: marks tests that require external services (deselect with '-m not integration')",
    "e2e: marks end-to-end browser tests using Playwright",
]
